- interactive rule execution