@@ -9,7 +9,7 @@ import com.google.common.base.Preconditions;
 import com.google.common.collect.Maps;
 import org.json.simple.JSONObject;
 import org.json.simple.JSONValue;
-import qa.qcri.nadeef.core.util.RuleWriter;
+import qa.qcri.nadeef.core.util.RuleBuilder;
 import qa.qcri.nadeef.tools.CommonTools;
 import qa.qcri.nadeef.tools.Tracer;
 
@@ -32,12 +32,11 @@ public class NadeefConfiguration {
     private static String violationTable;
     private static String repairTable;
     private static String auditTable;
-    @SuppressWarnings("FieldCanBeLocal")
     private static String schemaName = "public";
-    @SuppressWarnings("FieldCanBeLocal")
     private static String version = "1.0";
     private static int maxIterationNumber = 1;
-    private static HashMap<String, RuleWriter> ruleExtension = Maps.newHashMap();
+    private static HashMap<String, RuleBuilder> ruleExtension = Maps.newHashMap();
+
     //<editor-fold desc="Public methods">
 
     /**
@@ -74,16 +73,12 @@ public class NadeefConfiguration {
             String builderClassName = (String)ruleext.get(key);
             try {
                 Class builderClass = CommonTools.loadClass(builderClassName);
-                RuleWriter writer = (RuleWriter)builderClass.newInstance();
+                RuleBuilder writer = (RuleBuilder)builderClass.getConstructor().newInstance();
                 ruleExtension.put(key, writer);
             } catch (Exception e) {
                 tracer.err("Loading Rule extension " + key + " failed: " + e.getMessage());
                 e.printStackTrace();
             }
-        }
-        testMode = (Boolean)general.get("fd");
-        if (general.containsKey("maxIterationNumber")) {
-            maxIterationNumber = (Integer)general.get("maxIterationNumber");
         }
     }
 
@@ -124,7 +119,7 @@ public class NadeefConfiguration {
      * @param typeName type name.
      * @return RuleBuilder instance.
      */
-    public static RuleWriter tryGetRuleBuilder(String typeName) {
+    public static RuleBuilder tryGetRuleBuilder(String typeName) {
         if (ruleExtension.containsKey(typeName)) {
             return ruleExtension.get(typeName);
         }
